--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://www.w3schools.com/lib/w3.js"></script>
+    <script type="text/javascript">
+    imgArray=["./images/to.jpg","./images/fika.jpg","./images/morberg.jpg"];
+    inmDesc=["a","b","c"];
+    
+    
+    </script>
     <title>Start</title>
 </head>
 <body>
@@ -31,7 +37,7 @@
     </nav>  
 
     <div class="imagebox">
-            <img class="nature" src="./images/to.jpg">
+            <img  id ="bild" class="nature" src="./images/to.jpg">
             <img class="nature" src="./images/fika.jpg">
             <img class="nature" src="./images/morberg.jpg">
         <div id="left"><button onclick="myShow.previous()"><img  class="imagebox-buttons" src="./images/arrow-left.png" alt="Föregående bild"></button></div>
