Uppdatering av kundkorgen

--- a/kundkorg.html
+++ b/kundkorg.html
@@ -28,34 +28,28 @@
         </ul>       
     </nav>  
     
-<div class="kundkorg">
-    <div class="kundkorg-produkt">
-        <img src="./images/ting.jpg" alt="Produktbild">
-        <h3 class="kundkorg-produkt-header">Ting som bär våra minnen.</h3>
-        <p><span class="kundkorg-produkt-antal">Antal:</span></p>
-        <button class="kundkorg-button">Ta bort ur kundkorgen</button>
+    <div class="produkter">
+        <div class="produkt">
+            <img src="./images/vego.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">Jamie Oliver: Vego</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="vego.html">Läs mer</a></button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/morberg.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">Morberg Bakfickan</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="morberg.html">Läs mer</a></button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/to.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">To love and let go</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="to.html">Läs mer</a></button></p>
+        </div>
+
+        <button>Fortsätt Handla</button><button>Till Kassan</button>
     </div>
-    <div class="kundkorg-produkt">
-        <img src="./images/vego.jpg" alt="Produktbild">
-        <h3 class="kundkorg-produkt-header">Jamie Oliver: Vego
-        Enkla & goda rätter för alla</h3>
-        <p><span class="kundkorg-produkt-antal">Antal:</span></p>
-        <button class="kundkorg-button">Ta bort ur kundkorgen</button>
-    </div>
-    <div class="kundkorg-produkt">
-        <img src="./images/stark.jpg" alt="Produktbild">
-        <h3 class="kundkorg-produkt-header">Stark hela livet
-            Bättre ork, minne, mående och hälsa med fysisk aktivitet</h3>
-        <p><span class="kundkorg-produkt-antal">Antal:</span></p>
-        <button class="kundkorg-button">Ta bort ur kundkorgen</button>
-    </div>    <div class="kundkorg-produkt">
-        <img src="./images/vagen.jpg" alt="Produktbild">
-        <h3 class="kundkorg-produkt-header">Vägen till hormonell balans</h3>
-        <p><span class="kundkorg-produkt-antal">Antal:</span></p>
-        <button class="kundkorg-button">Ta bort ur kundkorgen</button>
-    </div>
-    <button>Till Kassan</button><button>Fortsätt Handla</button>
-</div>
 
 <footer class="footer">
         <div class="Validate">
