--- a/kundkorg.html
+++ b/kundkorg.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         
-    <header>
+    <header class="header">
         <div class="top">
             <li><img class="topicon" src="./images/Book.png"></li>
             <li><h1>Webbshop</h1></li>
