--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 </head>
 <body>
         
-    <header>
+    <header class="header">
         <div class="top">
             <li><img class="topicon" src="./images/Book.png"></li>
             <li><h1>Webbshop</h1></li>
             <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
         </div>
-          
     </header>
     <nav>
         <ul>        
