--- a/mat.html
+++ b/mat.html
@@ -11,7 +11,7 @@
 <body>
         
     
-    <header>
+    <header class="header">
         <div class="top">
             <li><img class="topicon" src="./images/Book.png"></li>
             <li><h1>Webbshop</h1></li>
