--- a/prepp.html
+++ b/prepp.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>  
-    <header>
+    <header class="header">
         <div class="top">
             <li><img class="topicon" src="./images/Book.png"></li>
             <li><h1>Webbshop</h1></li>
