--- a/prepp.html
+++ b/prepp.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="./script/slide.js">
+    </script>
     <title>Document</title>
 </head>
 <body>  
@@ -41,7 +43,7 @@
                     Precis som i Ylva Bergqvists senaste bok "Vego på 30 minuter" är rätterna lättlagade och smaksäkert komponerade med inspiration från hela världen. Så vänta inte! Ta fram kastrullerna och börja preppa. Livet blir så mycket enklare – och godare.
                     Detaljerad fakta</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button onclick="kop()">Köp Nu</button></p>
             <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
