--- a/morberg.html
+++ b/morberg.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="./script/slide.js">
+    </script>
     <title>Document</title>
 </head>
 <body>
@@ -45,7 +47,7 @@
                     
                     Per Morberg</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button onclick="kop()">Köp Nu</button></p>
             <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
