--- a/stark.html
+++ b/stark.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="./script/slide.js">
+    </script>
     <title>Document</title>
 </head>
 <body>
@@ -39,7 +41,7 @@
             <h3>Beskrivning</h3>
             <p class="produkt-info">Bromsa åldrandet idag med fysisk aktivitet! Forskningen visar nämligen att regelbunden träning är en mirakelmedicin. Få ett bättre flås och en starkare kropp samtidigt som du blir smartare, gladare och bättre håller vikten. Du kommer att få ett friskare hjärta, starkare skelett, jämnare blodsocker och minska risken för t ex cancer och demens. På köpet gör träningen dessutom att du känner dig lugnare och får en bättre sömn. I Stark hela livet har forskarna Jessica Norrbom och Carl Johan Sundberg samlat fakta, studier och råd för att hjälpa dig leva ett längre och friskare liv med varaktig träning. Kom ihåg att åldern är mycket mer än en siffra!</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button onclick="kop()">Köp Nu</button></p>
             <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
