--- a/ting.html
+++ b/ting.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="./script/slide.js">
+    </script>
     <title>Document</title>
 </head>
 <body>
@@ -41,7 +43,7 @@
             <p class="produkt-info">Dina och Jovan Rajs föddes i forna Jugoslavien och deras uppväxt präglades av förintelsen. Dina som gömd med falska identitetshandlingar och i ständig rädsla för att bli upptäckt, Jovan både som gömd och som fånge i flera koncentrationsläger. Här berättar de sin historia genom ting som de burit med sig genom livet. Det är saker som vid första anblick kan te sig triviala, men som tillsammans vittnar om ett liv som överlevande. En papperslapp, ett släktfoto, en förlovningsring, ett schackspel – saker som gömdes när de tvingades lämna sina hem. Saker som påverkat deras sätt att tänka och känna, som påminner om deras historia och som format dem genom livet.
                 </p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button onclick="kop()">Köp Nu</button></p>
             <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
