--- a/to.html
+++ b/to.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="./script/slide.js">
+    </script>
     <title>Document</title>
 </head>
 <body>
@@ -40,7 +42,7 @@
             <h3>Beskrivning</h3>
             <p class="produkt-info">Nu på svenska: Yogagirl skriver sin personliga berättelse om kärlek, förlust och tacksamhet. Rachel Brathen har inspirerat en hel yogavärld men under ytan finns en kamp som vi endast kunnat läsa i korta instagraminlägg. Här delar Rachel öppenhjärtigt med sig av sin gripande och inspirerande historia. Vi kommer närmare än någonsin förr när hon delar såväl förluster, ångest- och missbruksproblematik som starka upplevelser av det fina i livet. Från förlusten av sin bästa vän, sin mormors död och mors självmordsförsök till djup depression. När hon upptäcker att hon är gravid bestämmer hon sig för att göra allt hon kan för att bli hel igen. Rachel bjuder in läsaren till en fantastisk berättelse om en människas inneboende kraft att ta sig tillbaka till ett meningsfullt och vackert liv.</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button onclick="kop()">Köp Nu</button></p>
             <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
