--- a/vagen.html
+++ b/vagen.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="./script/slide.js">
+    </script>
     <title>Document</title>
 </head>
 <body>
@@ -39,7 +41,7 @@
             <h3>Beskrivning</h3>
             <p class="produkt-info">Klimakteriet är den period då kvinnans östrogenproduktion gradvis minskar, och är något som hälften av befolkningen går igenom – ofta med påtagliga förändringar både fysiskt och mentalt. Mia Lundin delar i sin nya bok med sig av sina djupa kunskaper i detta ämne. Hon berättar vad som händer med den hormonella balansen, och varför kvinnor mår som de gör. ”Hjälp! Jag känner inte igen mig själv längre! Från att varit en hyfsat driftig och snabbtänkt person känner jag mig nu som en trött och glömsk gamling.” Detta är bara ett av tusentals liknande nödrop riktade till Mia Lundin. Men det finns effektiv hjälp att få! Och Mia Lundin, som har jobbat som specialistsjuksköterska inom gynekologi och obstetrik i omkring trettio år, vet hur den hjälpen ser ut. Hon vet hur man kan återställa den hormonella balansen, och få tillbaka till både hälsa och välbefinnande.</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button onclick="kop()">Köp Nu</button></p>
             <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
