--- a/kundkorg.html
+++ b/kundkorg.html
@@ -46,8 +46,8 @@
             <p class="produkt-namn">To love and let go</p>
             <p class="pris">Pris: 100 SEK</p>
         </div>
-
-        <button>Fortsätt Handla</button><button>Till Kassan</button>
+        <button><a href="produkter.html" >Fortsätt Handla</a></button>
+        <button>Till Kassan</button>
     </div>
 
 <footer class="footer">
