--- a/fika.html
+++ b/fika.html
@@ -8,47 +8,44 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="./script/slide.js">
     </script>
-    <title>Document</title>
+    <title>Fika är livet</title>
 </head>
 <body>       
-    <header>
-            
-        <header class="header">
+    <header class="header">
             <div class="top">
                 <li><img class="topicon" src="./images/Book.png"></li>
                 <li><h1>Webbshop</h1></li>
                 <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
             </div>
-              
-        </header>
-        <nav>
-            <ul>        
-                <li><a href="index.html">Startsida</a></li>
-                <li><a href="produkter.html">Alla Böcker</a></li>
-                <li><a href="mat.html">Mat</a></li>
-                <li><a href="halsa.html">Hälsa</a></li>
-                <li><a href="ovrigt.html">Övrigt</a></li>
-            </ul>       
-        </nav>  
+    </header>
+    <nav>
+        <ul>        
+            <li><a href="index.html">Startsida</a></li>
+            <li><a href="produkter.html">Alla Böcker</a></li>
+            <li><a href="mat.html">Mat</a></li>
+            <li><a href="halsa.html">Hälsa</a></li>
+            <li><a href="ovrigt.html">Övrigt</a></li>
+        </ul>       
+    </nav>  
     <div class="produktsida">
-    <div class="produkt">
-            <img src="./images/fika.jpg" alt="Produkt byt text">
-            <h3>Författare</h3>
-            <p>Linda Hansson</p>
-            <h3>Utgivningsdatum</h3>
-            <p>2019-12-12</p>
-            <h3>Titel</h3>
-            <p class="produkt-namn">Fika är livet</p>
-            <h3>Beskrivning</h3>
-            <p class="produkt-info">Om man älskar när vännerna kommer på fika är det inte så dumt att snabbt kunna sno ihop en kaka, en paj eller – om det är extra festligt – en härlig sommartårta. Särskilt inte när man som jag bor på landet och gästerna kan ha åkt långt. Fort ska det gå, och det får inte vara alltför komplicerat.
+        <div class="produkt">
+                <img src="./images/fika.jpg" alt="Produkt byt text">
+                <h3>Författare</h3>
+                <p>Linda Hansson</p>
+                <h3>Utgivningsdatum</h3>
+                <p>2019-12-12</p>
+                <h3>Titel</h3>
+                <p class="produkt-namn">Fika är livet</p>
+                <h3>Beskrivning</h3>
+                <p class="produkt-info">Om man älskar när vännerna kommer på fika är det inte så dumt att snabbt kunna sno ihop en kaka, en paj eller – om det är extra festligt – en härlig sommartårta. Särskilt inte när man som jag bor på landet och gästerna kan ha åkt långt. Fort ska det gå, och det får inte vara alltför komplicerat.
 
-                    Här bjuder jag på några av recepten från Hela Sverige bakar, men också familjerecept med anor, mina personliga konditorifavoriter, och några klassiker med egen twist.
-                    Så kavla upp ärmarna och ta på förklädet, sätt på en riktigt bra låt, och sjung med medan doften av nybakat sprider sig i köket!
-                    Detaljerad fakta
-                    </p>
-            <p class="pris">Pris: 100 SEK</p>
-            <p><button onclick="kop()">Köp Nu</button></p>
-            <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
+                        Här bjuder jag på några av recepten från Hela Sverige bakar, men också familjerecept med anor, mina personliga konditorifavoriter, och några klassiker med egen twist.
+                        Så kavla upp ärmarna och ta på förklädet, sätt på en riktigt bra låt, och sjung med medan doften av nybakat sprider sig i köket!
+                        Detaljerad fakta
+                        </p>
+                <p class="pris">Pris: 100 SEK</p>
+                <p><button onclick="kop()">Köp Nu</button></p>
+                <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
         <footer class="footer">
@@ -61,6 +58,6 @@
                         <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png"></a>
                         <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png"></a>
                 </div>
-            </footer>
+        </footer>
 </body>
 </html>
