--- a/mat.html
+++ b/mat.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="./script/slide.js">
     </script>
-    <title>Produkter</title>
+    <title>Mat</title>
 </head>
 <body>
         
