--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         
     <header class="header">
         <div class="top">
-            <li><img class="topicon" src="./images/Book.png"></li>
+            <li><img class="topicon" src="./images/Book.png" alt="Loggan på sidan"></li>
             <li><h1>Webbshop</h1></li>
-            <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
+            <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Kundkorg ikon"></a></li>
         </div>
     </header>
     <nav>
@@ -99,13 +99,13 @@
 
 <footer class="footer">
     <div>
-        <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png"></a>
-        <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png"></a>
+        <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png" alt="CSS Validator"></a>
+        <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png" alt="HTML Validator"></a>
     </div>
     <div>
-            <a href="https://www.instagram.com/?hl=sv"><img class="footericons" src="./images/Instagram.png"></a>
-            <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png"></a>
-            <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png"></a>
+            <a href="https://www.instagram.com/?hl=sv"><img class="footericons" src="./images/Instagram.png" alt="Instagram länk"></a>
+            <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png" alt="Facebook länk"></a>
+            <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png" alt="Snapchat Länk"></a>
     </div>
 </footer>
 </body>
