--- a/fika.html
+++ b/fika.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="./script/slide.js">
+    <script src="./script/slide.js">
     </script>
     <title>Fika är livet</title>
 </head>
 <body>       
     <header class="header">
             <div class="top">
-                <li><img class="topicon" src="./images/Book.png"></li>
+                <li><img class="topicon" src="./images/Book.png" alt="Logga"></li>
                 <li><h1>Webbshop</h1></li>
-                <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
+                <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a></li>
             </div>
     </header>
     <nav>
@@ -29,7 +29,7 @@
     </nav>  
     <div class="produktsida">
         <div class="produkt">
-                <img src="./images/fika.jpg" alt="Produkt byt text">
+                <img src="./images/fika.jpg" alt="Boken, fika är livet">
                 <h3>Författare</h3>
                 <p>Linda Hansson</p>
                 <h3>Utgivningsdatum</h3>
@@ -50,13 +50,13 @@
     </div>
         <footer class="footer">
                 <div class="Validate">
-                    <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png"></a>
-                    <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png"></a>
+                    <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png" alt="CSS Validator"></a>
+                    <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png" alt="HTML Validator"></a>
                 </div>
                 <div class="Extern">
-                        <a href="https://www.instagram.com/?hl=sv"><img class="footericons" src="./images/Instagram.png"></a>
-                        <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png"></a>
-                        <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png"></a>
+                        <a href="https://www.instagram.com/?hl=sv"><img class="footericons" src="./images/Instagram.png" alt="instagram länk"></a>
+                        <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png" alt="facebook länk"></a>
+                        <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png" alt="Snapchat länk"></a>
                 </div>
         </footer>
 </body>
