--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="./script/slide.js">
+    <script src="./script/slide.js">
     </script>
     <title>Start</title>
 </head>
@@ -30,7 +30,7 @@
     </nav>  
 
     <div class="imagebox">
-            <img  id ="bild" class="nature" src="./images/to.jpg">
+            <img  id ="bild" class="nature" src="./images/to.jpg" alt="To Love and Let go cover">
         <div id="caption">En bra bok!</div>
         <div id="left"><button onclick="prev();"><img  class="imagebox-buttons" src="./images/arrow-left.png" alt="Föregående bild"></button></div>
         <div id="right"><button onclick="next();"><img  class="imagebox-buttons" src="./images/arrow-right.png" alt="Nästa bild"></button></div>
