--- a/kassa.html
+++ b/kassa.html
@@ -12,9 +12,9 @@
         
     <header>
             <div class="top">
-                <li><img class="topicon" src="./images/Book.png"></li>
+                <li><img class="topicon" src="./images/Book.png" alt="Logga på sidan"></li>
                 <li><h1>Webbshop</h1></li>
-                <li><a href="kassa.html"><img class="topicon" src="./images/cart.png"></a></li>
+                <li><a href="kassa.html"><img class="topicon" src="./images/cart.png" alt="Kundkorg"></a></li>
              </div>
                   
         </header>
@@ -25,20 +25,20 @@
             </ul>       
         </nav>
 
-        <img src="./images/ting.png" alt="Produktbild"><b>Dina Rajs, Jovan Rajs</b> Ting som bär våra minnen
-        <br><img src="images/vego.png" alt="Produktbild"><b>Jamie Oliver</b> Vego
-        <br><img src="images/stark.png" alt="Produktbild"> <b>Carl Johan Sundberg</b>Stark hela livet
-        <br><img src="images/vagen.png" alt="Produktbild"><b>Mia Lundin</b>Vägen till hormonell balans
+        <img src="./images/ting.png" alt="Boken ting som bär våra minnen"><b>Dina Rajs, Jovan Rajs</b> Ting som bär våra minnen
+        <br><img src="images/vego.png" alt="Jamie Oliver: Vego"><b>Jamie Oliver</b> Vego
+        <br><img src="images/stark.png" alt="Stark hela livet"> <b>Carl Johan Sundberg</b>Stark hela livet
+        <br><img src="images/vagen.png" alt="Vägen till hormonell balans"><b>Mia Lundin</b>Vägen till hormonell balans
         <br><button>Betala</button>
         <footer class="footer">
             <div class="Validate">
-                <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png"></a>
-                <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png"></a>
+                <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png" alt="CSS validator"></a>
+                <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png" alt="Html validator"></a>
             </div>
             <div class="Extern">
-                    <a href="https://www.instagram.com/?hl=sv"><img class="footericons" src="./images/Instagram.png"></a>
-                    <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png"></a>
-                    <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png"></a>
+                    <a href="https://www.instagram.com/?hl=sv"><img class="footericons" src="./images/Instagram.png" alt="instagram länk"></a>
+                    <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png" alt="Facebook länk"></a>
+                    <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png" alt="Snapchat länk"></a>
             </div>
         </footer>
 
