--- a/mat.html
+++ b/mat.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="./script/slide.js">
+    <script src="./script/slide.js">
     </script>
     <title>Mat</title>
 </head>
@@ -15,7 +15,7 @@
     
     <header class="header">
         <div class="top">
-            <li><img class="topicon" src="./images/Book.png"></li>
+            <li><img class="topicon" src="./images/Book.png" alt="Smiley face"></li>
             <li><h1>Webbshop</h1></li>
             <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
         </div>
