--- a/prepp.html
+++ b/prepp.html
@@ -13,9 +13,9 @@
 <body>  
     <header class="header">
         <div class="top">
-            <li><img class="topicon" src="./images/Book.png"></li>
+            <li><img class="topicon" src="./images/Book.png" alt="Loggan"></li>
             <li><h1>Webbshop</h1></li>
-            <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
+            <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Kundkorg"></a></li>
         </div>
           
     </header>
@@ -30,7 +30,7 @@
     </nav>  
             <div class="produktsida">
     <div class="produkt">
-            <img src="./images/prepp.jpg" alt="Produkt byt text">
+            <img src="./images/prepp.jpg" alt="prepp">
             <h3>Författare</h3>
             <p>Ylva Bergqvist</p>
             <h3>Utgivningsdatum</h3>
@@ -50,13 +50,13 @@
 
         <footer class="footer">
                 <div class="Validate">
-                    <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png"></a>
-                    <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png"></a>
+                    <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png" alt="CSS validator"></a>
+                    <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png" alt="html validator"></a>
                 </div>
                 <div >
-                        <a href="https://www.instagram.com/?hl=sv"><img class="footericons" src="./images/Instagram.png"></a>
-                        <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png"></a>
-                        <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png"></a>
+                        <a href="https://www.instagram.com/?hl=sv"><img class="footericons" src="./images/Instagram.png" alt="Instagram länk"></a>
+                        <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png" alt="facebook länk"></a>
+                        <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png" alt="snapchat länk"></a>
                 </div>
             </footer>
 
