--- a/to.html
+++ b/to.html
@@ -32,7 +32,7 @@
 
             <div class="produktsida">
     <div class="produkt">
-            <img src="./images/to.jpg" alt="Produkt byt text">
+            <img src="./images/to.jpg" alt="To Love and let go">
             <h3>Författare</h3>
             <p>Rachel Brathen</p>
             <h3>Utgivningsdatum</h3>
