--- a/ting.html
+++ b/ting.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="./script/slide.js">
+    <script src="./script/slide.js">
     </script>
     <title>Ting som bär våra minnen</title>
 </head>
