--- a/morberg.html
+++ b/morberg.html
@@ -47,7 +47,7 @@
                     Per Morberg</p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button onclick="kop()">Köp Nu</button></p>
-            <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
+            <p><form><button type="submit" formaction="produkter.html">Tillbaka till produkter</button></form></p>
         </div>
     </div>
 
