--- a/prepp.html
+++ b/prepp.html
@@ -44,7 +44,7 @@
                     Detaljerad fakta</p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button onclick="kop()">Köp Nu</button></p>
-            <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
+            <p><form><button type="submit" formaction="produkter.html">Tillbaka till produkter</button></form></p>
         </div>
     </div>
 
