--- a/fika.html
+++ b/fika.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +13,9 @@
 <body>       
     <header class="header">
             <div class="top">
-                <li><img class="topicon" src="./images/Book.png" alt="Logga"></li>
-                <li><h1>Webbshop</h1></li>
-                <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a></li>
+                <img class="topicon" src="./images/Book.png" alt="Logga">
+                <h1>Webbshop</h1>
+                <a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a>
             </div>
     </header>
     <nav>
