--- a/stark.html
+++ b/stark.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,13 +21,11 @@
           
     </header>
     <nav>
-        <ul>        
-            <li><a href="index.html">Startsida</a></li>
-            <li><a href="produkter.html">Alla Böcker</a></li>
-            <li><a href="mat.html">Mat</a></li>
-            <li><a href="halsa.html">Hälsa</a></li>
-            <li><a href="ovrigt.html">Övrigt</a></li>
-        </ul>       
+        <div class="top">
+            <img class="topicon" src="./images/Book.png" alt="Logga">
+            <h1>Webbshop</h1>
+            <a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a>
+        </div> 
     </nav>  
             <div class="produktsida">
     <div class="produkt">
