--- a/template.html
+++ b/template.html
@@ -12,11 +12,10 @@
         
     <header class="header">
         <div class="top">
-            <li><img class="topicon" src="./images/Book.png"></li>
-            <li><h1>Webbshop</h1></li>
-            <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
+            <img class="topicon" src="./images/Book.png" alt="Logga">
+            <h1>Webbshop</h1>
+            <a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a>
         </div>
-          
     </header>
     <nav>
         <ul>        
