--- a/kundkorg.html
+++ b/kundkorg.html
@@ -27,32 +27,25 @@
                 <li><a href="ovrigt.html">Övrigt</a></li>
             </ul>       
         </nav> 
-    <div class="kundkorg">
-        <div class="kundkorg-produkt">
+    <div class="produkter">
+        <div class="produkt">
             <a href="ting.html" target="_blank"><img src="./images/ting.jpg" alt="Ting som bär våra minnen"></a>
             <h3 class="kundkorg-produkt-header">Ting som bär våra minnen.</h3>
-            <p><span class="kundkorg-produkt-antal">Antal:</span></p>
+            <p><span class="kundkorg-produkt-antal">Antal: 1</span></p>
             <button class="kundkorg-button">Ta bort ur kundkorgen</button>
         </div>
-        <div class="kundkorg-produkt">
+        <div class="produkt">
             <a href="vego.html" target="_blank"><img src="./images/vego.jpg" alt="Jamie Oliver: vego"></a>
-            <h3 class="kundkorg-produkt-header">Jamie Oliver: Vego
-            Enkla & goda rätter för alla</h3>
+            <h3>Jamie Oliver: Vego</h3>
             <p><span class="kundkorg-produkt-antal">Antal:</span></p>
             <button class="kundkorg-button">Ta bort ur kundkorgen</button>
         </div>
-        <div class="kundkorg-produkt">
+        <div class="produkt">
             <a href="stark.html" target="_blank"><img src="./images/stark.jpg" alt="Stark hela livet"></a>
-            <h3 class="kundkorg-produkt-header">Stark hela livet
-                Bättre ork, minne, mående och hälsa med fysisk aktivitet</h3>
+            <h3 >Stark hela livet</h3>
             <p><span class="kundkorg-produkt-antal">Antal:</span></p>
             <button class="kundkorg-button">Ta bort ur kundkorgen</button>
-        </div>    <div class="kundkorg-produkt">
-            <a href="vagen.html" target="_blank"><img src="./images/vagen.jpg" alt="Vägen till hormonell balans"></a>
-            <h3 class="kundkorg-produkt-header">Vägen till hormonell balans</h3>
-            <p><span class="kundkorg-produkt-antal">Antal:</span></p>
-            <button class="kundkorg-button">Ta bort ur kundkorgen</button>
-        </div>
+        </div>    
         <button>Till Kassan</button><button><a href="./produkter.html">Fortsätt Handla</a></button>
     </div>
 
