--- a/omoss.html
+++ b/omoss.html
@@ -16,7 +16,7 @@
         <div class="top">
             <img class="topicon" src="./images/Book.png" alt="Logga">
             <h1>Webbshop</h1>
-            <a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a>
+            <a href="kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a>
         </div>
     </header>
     <nav>
@@ -47,6 +47,5 @@
                         <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png" alt="snapchat länk"></a>
                 </div>
             </footer>       
-        
 </body>
 </html>
