--- a/produkter.html
+++ b/produkter.html
@@ -17,7 +17,7 @@
         <div class="top">
             <img class="topicon" src="./images/Book.png" alt="Logga">
             <h1>Webbshop</h1>
-            <a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a>
+            <a href="kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a>
         </div>
     </header>
     <nav>
@@ -35,55 +35,55 @@
             <img src="./images/ting.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Ting som bär våra minnen</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="ting.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="ting.html">Läs mer</button></form>
         </div>
         <div class="produkt">
             <img src="./images/vego.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Jamie Oliver: Vego</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="vego.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="vego.html">Läs mer</button></form>
         </div>
         <div class="produkt">
             <img src="./images/stark.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Stark Hela livet</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="stark.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="stark.html">Läs mer</button></form>
         </div>
         <div class="produkt">
             <img src="./images/vagen.jpg" alt="Produkt byt text">
             <p class="produkt-namn">   Vägen till Hormonell balans </p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="vagen.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="vagen.html">Läs mer</button></form>
         </div>
         <div class="produkt">
             <img src="./images/to.jpg" alt="Produkt byt text">
             <p class="produkt-namn">To love and let go</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="to.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="to.html">Läs mer</button></form>
         </div>
         <div class="produkt">
             <img src="./images/fika.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Fika är livet</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="fika.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="fika.html">Läs mer</button></form>
         </div>
         <div class="produkt">
             <img src="./images/morberg.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Morberg Bakfickan</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="morberg.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="morberg.html">Läs mer</button></form>
         </div>
         <div class="produkt">
             <img src="./images/prepp.jpg" alt="Produkt byt text">
             <p class="produkt-namn">PREPP</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="prepp.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="prepp.html">Läs mer</button></form>
         </div>
         <div class="produkt">
                 <img src="./images/under.jpg" alt="Produkt byt text">
                 <p class="produkt-namn">Underbart</p>
                 <p class="pris">Pris: 100 SEK</p>
-                <p><button><a href="under.html">Läs mer</a></button></p>
+                <form><button type="submit" formaction="under.html">Läs mer</button></form>
         </div>
     </div>
 
