--- a/kundkorg.html
+++ b/kundkorg.html
@@ -15,7 +15,7 @@
             <div class="top">
                 <img class="topicon" src="./images/Book.png" alt="Logga">
                 <h1>Webbshop</h1>
-                <a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a>
+                <a href="kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a>
             </div>
         </header>
         <nav>
