--- a/stark.html
+++ b/stark.html
@@ -16,7 +16,7 @@
         <div class="top">
             <li><img class="topicon" src="./images/Book.png" alt="Loggan"></li>
             <li><h1>Webbshop</h1></li>
-            <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Kundkorg"></a></li>
+            <li><a href="kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Kundkorg"></a></li>
         </div>
           
     </header>
