--- a/halsa.html
+++ b/halsa.html
@@ -36,13 +36,13 @@
             <img src="./images/stark.jpg" alt="Boken Stark Hela livet">
             <p class="produkt-namn">Stark Hela livet</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="stark.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="stark.html">Läs mer</button></form>
         </div>
         <div class="produkt">
             <img src="./images/vagen.jpg" alt="Boken Vägen till Hormonell balans">
             <p class="produkt-namn">   Vägen till Hormonell balans </p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="vagen.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="vagen.html">Läs mer</button></form>
         </div>
     </div>
 
