--- a/morberg.html
+++ b/morberg.html
@@ -46,7 +46,7 @@
                     Per Morberg</p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button onclick="kop()">Köp Nu</button></p>
-            <p><form><button type="submit" formaction="produkter.html">Tillbaka till produkter</button></form></p>
+            <form><button type="submit" formaction="produkter.html">Tillbaka till produkter</button></form>
         </div>
     </div>
 
