--- a/ovrigt.html
+++ b/ovrigt.html
@@ -34,19 +34,19 @@
             <img src="./images/ting.jpg" alt="Ting som bär våra minnen">
             <p class="produkt-namn">Ting som bär våra minnen</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="ting.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="ting.html">Läs mer</button></form>
         </div>
         <div class="produkt">
             <img src="./images/to.jpg" alt="To love and let go">
             <p class="produkt-namn">To love and let go</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button><a href="to.html">Läs mer</a></button></p>
+            <form><button type="submit" formaction="to.html">Läs mer</button></form>
         </div>
         <div class="produkt">
                 <img src="./images/under.jpg" alt="Underbart">
                 <p class="produkt-namn">Underbart</p>
                 <p class="pris">Pris: 100 SEK</p>
-                <p><button><a href="under.html">Läs mer</a></button></p>
+                <form><button type="submit" formaction="under.html">Läs mer</button></form>
         </div>
     </div>
 
