--- a/kundkorg.html
+++ b/kundkorg.html
@@ -37,13 +37,13 @@
         <div class="produkt">
             <a href="vego.html" target="_blank"><img src="./images/vego.jpg" alt="Jamie Oliver: vego"></a>
             <h3>Jamie Oliver: Vego</h3>
-            <p><span class="kundkorg-produkt-antal">Antal:</span></p>
+            <p><span class="kundkorg-produkt-antal">Antal: 2</span></p>
             <button class="kundkorg-button">Ta bort ur kundkorgen</button>
         </div>
         <div class="produkt">
             <a href="stark.html" target="_blank"><img src="./images/stark.jpg" alt="Stark hela livet"></a>
             <h3 >Stark hela livet</h3>
-            <p><span class="kundkorg-produkt-antal">Antal:</span></p>
+            <p><span class="kundkorg-produkt-antal">Antal: 4</span></p>
             <button class="kundkorg-button">Ta bort ur kundkorgen</button>
         </div>    
         <button>Till Kassan</button><button><a href="./produkter.html">Fortsätt Handla</a></button>
