--- a/mat.html
+++ b/mat.html
@@ -66,6 +66,9 @@
                                 <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png" alt="instagram länk"></a>
                                 <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png" alt="Snapchat länk"></a>
                         </div>
+                        <div>
+                            <a href ="omoss.html"><img class="footericons" src="./images/Book.png" alt="Länk till företagets sida"></a>
+                        </div>
                     </footer>
                 
 </body>
