--- a/produkter.html
+++ b/produkter.html
@@ -98,6 +98,9 @@
                                 <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png" alt="Instagram länk"></a>
                                 <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png" alt="Instagram länk"></a>
                         </div>
+                        <div>
+                            <a href ="omoss.html"><img class="footericons" src="./images/Book.png" alt="Länk till företagets sida"></a>
+                        </div>
                     </footer>
                 
 </body>
