--- a/stark.html
+++ b/stark.html
@@ -54,6 +54,9 @@
                         <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png" alt="facebook länk"></a>
                         <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png" alt="snapchat länk"></a>
                 </div>
+                <div>
+                    <a href ="omoss.html"><img class="footericons" src="./images/Book.png" alt="Länk till företagets sida"></a>
+                </div>
             </footer>
 </body>
 </html>
