--- a/template.html
+++ b/template.html
@@ -37,6 +37,9 @@
                             <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png"></a>
                             <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png"></a>
                     </div>
+                    <div>
+                        <a href ="omoss.html"><img class="footericons" src="./images/Book.png" alt="Länk till företagets sida"></a>
+                    </div>
                 </footer>
 
 </body>
