--- a/fika.html
+++ b/fika.html
@@ -44,7 +44,7 @@
                         </p>
                 <p class="pris">Pris: 100 SEK</p>
                 <p><button onclick="kop()">Köp Nu</button></p>
-                <p><form><button type="submit" formaction="produkter.html">Tillbaka till produkter</button></form></p>
+                <form><button type="submit" formaction="produkter.html">Tillbaka till produkter</button></form>
         </div>
     </div>
         <footer class="footer">
