--- a/kundkorg.html
+++ b/kundkorg.html
@@ -46,8 +46,9 @@
             <p><span class="kundkorg-produkt-antal">Antal: 4</span></p>
             <button class="kundkorg-button">Ta bort ur kundkorgen</button>
         </div>    
-        <button>Till Kassan</button><button><a href="./produkter.html">Fortsätt Handla</a></button>
-    </div>
+        <form><button>Till Kassan</button></form>
+        <form><button type="submit" formaction="produkter.html">Fortsätt handla</button></form>
+        </div>
 
     <footer class="footer">
             <div class="Validate">
