--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>  
 
     <div class="imagebox">
-            <img  id ="bild" class="nature" src="./images/to.jpg" alt="To Love and Let go cover">
+            <img  id ="bild" class="book" src="./images/to.jpg" alt="To Love and Let go cover">
         <div id="caption">En bra bok!</div>
         <div id="left"><button onclick="prev();"><img  class="imagebox-buttons" src="./images/arrow-left.png" alt="Föregående bild"></button></div>
         <div id="right"><button onclick="next();"><img  class="imagebox-buttons" src="./images/arrow-right.png" alt="Nästa bild"></button></div>
@@ -92,10 +92,6 @@
             <form><button type="submit" formaction="under.html">Läs mer</button></form>
         </div>
     </div>
-    <script>
-        myShow = w3.slideshow(".nature", 0);
-    </script>
-
 <footer class="footer">
     <div>
         <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png" alt="CSS Validator"></a>
