--- a/fika.html
+++ b/fika.html
@@ -13,7 +13,7 @@
     <header class="header">
             <div class="top">
                 <img class="topicon" src="./images/Book.png" alt="Logga">
-                <h1>Webbshop</h1>
+                <h1>Bokshop</h1>
                 <a href="kundkorg.html"><img class="topicon" src="./images/cart.png" alt="Logga"></a>
             </div>
     </header>
